# iris-recognition

./: .gitignore  DESIGN.md  DOCS.md  PLAN.md  PLAN_UI.md  README.md  TOPIC.md  database.db  pyproject.toml  skills-lock.json
scripts/: audit_segmentation.py
src/: benchmark.py  debug_seg.py  main.py
src/api/: main.py  models.py
src/api/static/: app.js  index.html  style.css
src/api/templates/: base.html  directory.html  enroll.html  identify.html
src/core/: encoding.py  io.py  matching.py  normalization.py  segmentation.py
src/utils/: visualization.py
tests/: test_io.py  test_normalization.py  test_recognition.py  test_segmentation.py
